.archive/nx-kubeflow-deployment/kubeflow/gateway/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubeflow-demo-ingress-cert
  namespace: istio-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    kubernetes.io/tls-acme: "true"
    #kubernetes.io/ingress.class: istio
spec:
  ingressClassName: istio
  rules:
  - host: kubeflow-kcd.demo.kubermatic.io
    http:
      paths:
        - backend:
            service:
              name: istio-ingressgateway
              port:
                number: 80
          path: /
          pathType: ImplementationSpecific
  tls:
  - hosts:
    - kubeflow-kcd.demo.kubermatic.io # This should match a DNS name in the Certificate
    secretName: kubeflow-demo-ingress-cert # This should match the Certificate secretName
